# uniproxy

./: .gitignore  CMakeLists.txt  README.md  release.cpp  uniproxy.json.sample
codelite/: uniproxy.project  uniproxy.workspace
deb/: build-package.sh  description-pak  postinstall-pak  postremove-pak  preinstall-pak  preremove-pak  uniproxy.conf  uniproxy.service
doc/: client.json.sample  license.txt  server.json.sample  uniproxy-design.odt  uniproxy-manual.odt  uniproxy.json.sample
installer/: include_code_w32_services.iss  include_versions.iss  uniproxy.iss
installer/third/: readme.txt
libs/boost-ext/include/boost/process/: initializers.hpp  search_path.hpp
libs/boost-ext/include/boost/process/posix/: initializers.hpp  search_path.hpp  shell_path.hpp
libs/boost-ext/include/boost/process/posix/initializers/: close_fds_if.hpp  set_args.hpp  set_cmd_line.hpp  set_on_error.hpp  throw_on_error.hpp
libs/boost-ext/include/boost/process/windows/: initializers.hpp  search_path.hpp  shell_path.hpp
libs/boost-ext/include/boost/process/windows/initializers/: set_args.hpp  set_cmd_line.hpp  set_env.hpp
libs/gatehouse/: CMakeLists.txt  pghp2.cpp  pghp2.h  pghpbase.cpp  pghpbase.h  pghpgeneral.h  pghpinternalbase.cpp  pghpinternalbase.h  pghplogoffrequest.cpp  pghplogoffrequest.h  pghplogonreply.cpp  pghplogonreply.h  pghplogonrequest.cpp  pghplogonrequest.h  pghpnmeamsg.cpp  pghpnmeamsg.h  pghpplugin.cpp  pghpplugin.h  pghpproxyfilter.cpp  pghpproxyfilter.h  pghpstartdatarequest.cpp  pghpstartdatarequest.h  pghputils.cpp  pghputils.h  pghpxmlutil.cpp  pghpxmlutil.h
src/: CMakeLists.txt  applutil.cpp  applutil.h  baseclient.cpp  baseclient.h  cppcms_util.h  error_codes.h  httpclient.cpp  httpclient.h  localclient.cpp  localclient.h  main.cpp  main.h  platform.h  providerclient.cpp  providerclient.h  proxy_global.cpp  proxy_global.h  remoteclient.cpp  remoteclient.h  win_util.cpp  win_util.h
webserver/: content.h  master.tmpl  view_config.tmpl  view_status.tmpl
